# skia-builder-ng

./: .gitignore  BUILD.md  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: auto-update-skia-version.yml  build_skia_android.yml  build_skia_ios.yml  build_skia_iossimulator.yml  build_skia_linux.yml  build_skia_macos.yml  build_skia_win.yml  build_skia_windows.yml  draft_skia_builder_win_android.yml  ruff-format-check.yml  skia_builder_android.yml
builder/: cli.py  config.py  utils.py
skia_builder/: cli.py  config.py  utils.py  versions.py
