[build-system]
requires = [
  "setuptools>=75.6.0",
  "Cython>=3.0.11", 
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = ["*-musllinux*", "pp*", "*-win32"]


[project]
name = "skia-builder"
version = "0.0.0"
description = "Cross-platform tool for Skia environment setup and binary generation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "DexerBR", email = "73297572+DexerBR@users.noreply.github.com" }, { name = "Mirko Galimberti", email = "me@mirkogalimberti.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]
keywords = ["skia", "tool", "cross-platform", "mobile", "desktop", "kivy"]


[project.optional-dependencies]
dev = ["ruff>=0.9.3"]


[project.scripts]
skia-builder = "skia_builder.cli:main"


[tool.setuptools]
packages = ["skia_builder"]
package-data = { "skia_builder" = ["**/*"] }


# [project.urls]
# "Homepage" = "https://github.com/DexerBR/skia-builder"
# "Bug Reports" = "https://github.com/DexerBR/skia-builder/issues"


[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W"]
lint.ignore = ["W391"]
